Макет мед. клиники с применением grid, background-blend. Футер (форма обратной связи) еще в процессе.

--- a/homework4/index.html
+++ b/homework4/index.html
@@ -48,7 +48,7 @@
 					<a href="#"><i class="fab fa-google-plus-g"></i></a>
 					<a href="#"><i class="fab fa-vk"></i></a>
 					<a href="#"><i class="fab fa-youtube"></i></a>
-					<a href="#"><i class="fab fa-instagram"></i></a>
+					<a href="#"><i class="fab fa-linkedin"></i></a>
 				</div>
 			</div>
 		</div>
@@ -181,9 +181,9 @@
 						<div class="case">
 							<img src="img/case1.png" alt="case1">
 							<blockquote>
-									<p>Lorem ipsum dolor sit amet,</p>
-									<time>April 19, 2017</time>
-								<cite> | Dr. Jon Doe</cite>
+								<h3>Lorem ipsum dolor sit amet,</h3>
+								<time>April 19, 2017</time>
+								<cite> &#448; Dr. Jon Doe</cite>
 								<p>
 									Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.
 								</p>
@@ -192,9 +192,9 @@
 						<div class="case">
 							<img src="img/case2.png" alt="case2">
 							<blockquote>
-									<p>Lorem ipsum dolor sit amet,</p>
-									<time>April 19, 2017</time>
-								<cite>Dr. Jon Doe</cite>
+								<h3>Lorem ipsum dolor sit amet,</h3>
+								<time>April 19, 2017</time>
+								<cite> &#448; Dr. Jon Doe</cite>
 								<p>
 									Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.
 								</p>
@@ -206,22 +206,152 @@
 				<article class="creative">
 					<h2>Our creative</h2>
 					<p>
-						Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.
+						Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.Sed ut perspiciatis unde omnis iste natus error sit voluptatem
 					</p>
-					<audio src=""></audio>
-					<p></p>
-					<audio src=""></audio>
-					<audio src=""></audio>
-					<audio src=""></audio>
+					<audio src="audio/audio.mp3" controls></audio>
+					<p>
+						Sed ut perspiciatis unde omnis iste natus error s.it voluptatem accusantium doloremque laudantium.Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.
+					</p>
+					<audio src="audio/audio.mp3" controls></audio>
+					<audio src="audio/audio.mp3" controls></audio>
+					<audio src="audio/audio.mp3" controls></audio>
 				</article>
+			</div>
+		</section>
+		<section class="gallery">
+			<div class="container">
+				<h2>Gallery</h2>
+				<p>
+					Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.
+				</p>
+				<div class="pictures">
+					<img src="img/picture1.png" alt="picture">
+					<img src="img/picture2.png" alt="picture">
+					<img src="img/picture3.png" alt="picture">
+					<img src="img/picture4.png" alt="picture">
+					<img src="img/picture5.png" alt="picture">
+					<img src="img/picture6.png" alt="picture">
+				</div>
+			</div>
+		</section>
+		<section class="team">
+			<div class="container">
+				<h2>Our Team</h2>
+				<p>
+					Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.Sed ut perspiciatis unde omnis iste natus error <br> sit voluptatem accusantium doloremque laudantium.
+				</p>
+				<div class="members">
+					<div class="member">
+						<img src="img/teamMember1.png" alt="team member">
+						<h3>Dr Ricky Doe</h3>
+						<p>Assistant Surgeon</p>
+						<div class="memberSocials">
+							<a href="#"><i class="fab fa-facebook-f"></i></a>
+							<a href="#"><i class="fab fa-google-plus-g"></i></a>
+							<a href="#"><i class="fab fa-vk"></i></a>
+						</div>
+					</div>
+					<div class="member">
+						<img src="img/teamMember2.png" alt="team member">
+						<h3>Dr Ricky Doe</h3>
+						<p>Assistant Surgeon</p>
+						<div class="memberSocials">
+							<a href="#"><i class="fab fa-facebook-f"></i></a>
+							<a href="#"><i class="fab fa-google-plus-g"></i></a>
+							<a href="#"><i class="fab fa-vk"></i></a>
+						</div>
+					</div>
+					<div class="member">
+						<img src="img/teamMember3.png" alt="team member">
+						<h3>Dr Ricky Doe</h3>
+						<p>Assistant Surgeon</p>
+						<div class="memberSocials">
+							<a href="#"><i class="fab fa-facebook-f"></i></a>
+							<a href="#"><i class="fab fa-google-plus-g"></i></a>
+							<a href="#"><i class="fab fa-vk"></i></a>
+						</div>
+					</div>
+					<div class="member">
+						<img src="img/teamMember4.png" alt="team member">
+						<h3>Dr Ricky Doe</h3>
+						<p>Assistant Surgeon</p>
+						<div class="memberSocials">
+							<a href="#"><i class="fab fa-facebook-f"></i></a>
+							<a href="#"><i class="fab fa-google-plus-g"></i></a>
+							<a href="#"><i class="fab fa-vk"></i></a>
+						</div>
+					</div>
+				</div>
+			</div>
+			
+		</section>
+		<section class="specialOffer">
+			<div class="container">
+				<h3>New Patient Special Offer Complimentary Consultation</h3>
+				<button class="button">READ MORE</button>
 			</div>
 		</section>
 	</main>
 
 	<footer>
-
+		<div class="container">
+			<div class="footerColumn1">
+				<h3>Get in Touch</h3>
+				<div class="footerColumnWrap">
+					<i class="far fa-envelope"></i>
+					<p>free@psdfreebies.com <br>free@psdfreebies.com</p>
+					<i class="fas fa-mobile-alt"></i>
+					<p>+123 456 7890 <br>+123 456 7890</p>
+					<i class="fas fa-map-marked-alt"></i>
+					<p>123, Main Road, New City, <br>My Country 123456</p>
+				</div>
+				<div class="socials">
+					<a href="#"><i class="fab fa-facebook-f"></i></a>
+					<a href="#"><i class="fab fa-google-plus-g"></i></a>
+					<a href="#"><i class="fab fa-vk"></i></a>
+					<a href="#"><i class="fab fa-youtube"></i></a>
+					<a href="#"><i class="fab fa-linkedin"></i></a>
+				</div>
+			</div>
+			<div class="footerColumn2 footerColumn">
+				<h3>Quick Links</h3>
+				<ul>
+					<li><a href="#">About us</a></li>
+					<li><a href="#">Blog</a></li>
+					<li><a href="#">Contact us</a></li>
+					<li><a href="#">Faq</a></li>
+					<li><a href="#">Insurance</a></li>
+					<li><a href="#">Contact us</a></li>
+				</ul>
+			</div>
+			<div class="footerColumn3 footerColumn">
+				<h3>Our Services</h3>
+				<ul>
+						<li><a href="#">Work Injures</a></li>
+						<li><a href="#">Sport Injures</a></li>
+						<li><a href="#">Cold Laser Therapy</a></li>
+						<li><a href="#">Massage Therapy</a></li>
+						<li><a href="#">Physiotherapy</a></li>
+						<li><a href="#">Chiropratic Therapy</a></li>
+					</ul>
+			</div>
+			<div class="footerColumn4 footerColumn">
+				<h3>Enquiry Form</h3>
+				<form method="POST">
+					<input type="text" required placeholder="Name">
+					<input type="phone" pattern="7\([0-9]{3}\)[0-9]{3}-[0-9]{2}-[0-9]{2}" required placeholder="Phone">
+					<textarea name="textarea" id="text" cols="30" rows="10" placeholder="Message"></textarea>
+					<button class="button">Send</button>
+				</form>
+			</div>
+		</div>
+		<div class="footerBottom">
+			<p>
+				Copyright © 2017. PSDFreebies.com  | Best PSD Template for freelancer and agencies
+			</p>
+		</div>
 	</footer>
-
+	
 	<script src="fonts/fontawesome-free-5.9.0-web/js/all.js"></script>
 </body>
 </html>
