--- a/homework4/index.html
+++ b/homework4/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" href="fonts/fontawesome-free-5.9.0-web/css/all.css">
-	<!-- <link rel="stylesheet" href="styles/normalize.css"> -->
 	<link rel="stylesheet" href="styles/style.css">
 	<title>Grid + BGR</title>
 </head>
+
 <body>
 	<header>
 		<div class="container">
@@ -34,14 +35,14 @@
 			</div>
 			<div class="headerDownLine">
 				<nav>
-						<ul>
-							<li><a href="#">Home</a></li>
-							<li><a href="#">About</a></li>
-							<li><a href="#">Services</a></li>
-							<li><a href="#">Gallery</a></li>
-							<li><a href="#">Blog</a></li>
-							<li><a href="#">Contact us</a></li>
-						</ul>
+					<ul>
+						<li><a href="#">Home</a></li>
+						<li><a href="#">About</a></li>
+						<li><a href="#">Services</a></li>
+						<li><a href="#">Gallery</a></li>
+						<li><a href="#">Blog</a></li>
+						<li><a href="#">Contact us</a></li>
+					</ul>
 				</nav>
 				<div class="socials">
 					<a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -107,7 +108,9 @@
 				<div class="chooseTitle">
 					<h2>Why Choose Us ?</h2>
 					<p>
-						Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem <br> aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. 
+						Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
+						<br> aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt
+						explicabo.
 					</p>
 				</div>
 				<div class="reason reason1">
@@ -139,7 +142,7 @@
 					</p>
 				</div>
 				<div class="reasonImg"><img src="img/reasonImg.png" alt="doctor"></div>
-				
+
 			</div>
 		</section>
 		<section class="statistics">
@@ -173,9 +176,10 @@
 		<section class="howWork">
 			<div class="container">
 				<article class="howCase">
-					<h2>How we works</h2>
+					<h2>How we work</h2>
 					<p>
-						Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.
+						Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.Sed ut
+						perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.
 					</p>
 					<div class="caseWrap">
 						<div class="case">
@@ -206,11 +210,13 @@
 				<article class="creative">
 					<h2>Our creative</h2>
 					<p>
-						Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.Sed ut perspiciatis unde omnis iste natus error sit voluptatem
+						Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.Sed ut
+						perspiciatis unde omnis iste natus error sit voluptatem
 					</p>
 					<audio src="audio/audio.mp3" controls></audio>
 					<p>
-						Sed ut perspiciatis unde omnis iste natus error s.it voluptatem accusantium doloremque laudantium.Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.
+						Sed ut perspiciatis unde omnis iste natus error s.it voluptatem accusantium doloremque laudantium.Sed ut
+						perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.
 					</p>
 					<audio src="audio/audio.mp3" controls></audio>
 					<audio src="audio/audio.mp3" controls></audio>
@@ -222,7 +228,8 @@
 			<div class="container">
 				<h2>Gallery</h2>
 				<p>
-					Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.
+					Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.Sed ut
+					perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.
 				</p>
 				<div class="pictures">
 					<img src="img/picture1.png" alt="picture">
@@ -238,7 +245,8 @@
 			<div class="container">
 				<h2>Our Team</h2>
 				<p>
-					Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.Sed ut perspiciatis unde omnis iste natus error <br> sit voluptatem accusantium doloremque laudantium.
+					Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.Sed ut
+					perspiciatis unde omnis iste natus error <br> sit voluptatem accusantium doloremque laudantium.
 				</p>
 				<div class="members">
 					<div class="member">
@@ -283,7 +291,7 @@
 					</div>
 				</div>
 			</div>
-			
+
 		</section>
 		<section class="specialOffer">
 			<div class="container">
@@ -327,13 +335,13 @@
 			<div class="footerColumn3 footerColumn">
 				<h3>Our Services</h3>
 				<ul>
-						<li><a href="#">Work Injures</a></li>
-						<li><a href="#">Sport Injures</a></li>
-						<li><a href="#">Cold Laser Therapy</a></li>
-						<li><a href="#">Massage Therapy</a></li>
-						<li><a href="#">Physiotherapy</a></li>
-						<li><a href="#">Chiropratic Therapy</a></li>
-					</ul>
+					<li><a href="#">Work Injures</a></li>
+					<li><a href="#">Sport Injures</a></li>
+					<li><a href="#">Cold Laser Therapy</a></li>
+					<li><a href="#">Massage Therapy</a></li>
+					<li><a href="#">Physiotherapy</a></li>
+					<li><a href="#">Chiropratic Therapy</a></li>
+				</ul>
 			</div>
 			<div class="footerColumn4 footerColumn">
 				<h3>Enquiry Form</h3>
@@ -343,11 +351,12 @@
 						<label class="formLabel">Name</label>
 					</div>
 					<div class="formGroup">
-						<input class="formInput" type="phone" pattern="7\([0-9]{3}\)[0-9]{3}-[0-9]{2}-[0-9]{2}" placeholder=" ">
+						<input class="formInput" type="tel" pattern="7\([0-9]{3}\)[0-9]{3}-[0-9]{2}-[0-9]{2}" placeholder=" ">
 						<label class="formLabel">Email</label>
 					</div>
 					<div class="formGroup">
-						<textarea class="formInput textarea" name="textarea" id="text" cols="30" rows="10" placeholder=" "></textarea>
+						<textarea class="formInput textarea" name="textarea" id="text" cols="30" rows="10"
+							placeholder=" "></textarea>
 						<label class="formLabel">Message</label>
 					</div>
 					<button class="formButton">Send</button>
@@ -356,11 +365,12 @@
 		</div>
 		<div class="footerBottom">
 			<p>
-				Copyright © 2017. PSDFreebies.com  | Best PSD Template for freelancer and agencies
+				Copyright © 2017. PSDFreebies.com | Best PSD Template for freelancer and agencies
 			</p>
 		</div>
 	</footer>
-	
+
 	<script src="fonts/fontawesome-free-5.9.0-web/js/all.js"></script>
 </body>
+
 </html>
