Поправил стили кнопок

--- a/homework4/index.html
+++ b/homework4/index.html
@@ -359,7 +359,7 @@
 							placeholder=" "></textarea>
 						<label class="formLabel">Message</label>
 					</div>
-					<button class="formButton">Send</button>
+					<button class="formButton">SUBMIT</button>
 				</form>
 			</div>
 		</div>
