--- a/hw6/pages/catalog.html
+++ b/hw6/pages/catalog.html
@@ -6,20 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>EcoSibToys-деревянные игрушки</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
     <div class="container">
         <div class="header">
             <div class="headerLogo">
-                <a href="index.html"><img src="images/main/logo_main.png" alt="Ecosibtoys"></a>
+                <a href="../index.html"><img src="../images/main/logo_main.png" alt="Ecosibtoys"></a>
             </div>
             <div class="menu">
                 <div class="nav">
                     <ul>
                         <li>
-                            <a href="index.html">Главная</a>
+                            <a href="../index.html">Главная</a>
                         </li>
                         <li>
                             <a href="catalog.html">Игрушки</a>
@@ -41,19 +41,19 @@
                 <table class="tableItems">
                     <tr>
                         <td>
-                            <a href="catalog/item1.html"><img src="images/items/item1preview.jpg" alt="Чемодан"></a><br>
+                            <a href="../catalog/item1.html"><img src="../images/items/item1preview.jpg" alt="Чемодан"></a><br>
                             Чемодан с инструментами <br>
                         </td>
                         <td>
-                            <a href="catalog/item2.html"><img src="images/items/item2preview.jpg" alt="Улитка"></a><br>
+                            <a href="../catalog/item2.html"><img src="../images/items/item2preview.jpg" alt="Улитка"></a><br>
                             Улитка-пазл <br>
                         </td>
                         <td>
-                            <a href="catalog/item3.html"><img src="images/items/item3preview.jpg" alt="Улитка"></a><br>
+                            <a href="../catalog/item3.html"><img src="../images/items/item3preview.jpg" alt="Улитка"></a><br>
                             Алфавит <br>
                         </td>
                         <td>
-                            <a href="catalog/item4.html"><img src="images/items/item4preview.jpg" alt="Улитка"></a><br>
+                            <a href="../catalog/item4.html"><img src="../images/items/item4preview.jpg" alt="Улитка"></a><br>
                             Пятнашки <br>
                         </td>
                 </table>
