--- a/hw6/pages/contacts.html
+++ b/hw6/pages/contacts.html
@@ -6,20 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>EcoSibToys-деревянные игрушки</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
     <div class="container">
         <div class="header">
             <div class="headerLogo">
-                <a href="index.html"><img src="images/main/logo_main.png" alt="Ecosibtoys"></a>
+                <a href="../index.html"><img src="../images/main/logo_main.png" alt="Ecosibtoys"></a>
             </div>
             <div class="menu">
                 <div class="nav">
                     <ul>
                         <li>
-                            <a href="index.html">Главная</a>
+                            <a href="../index.html">Главная</a>
                         </li>
                         <li>
                             <a href="catalog.html">Игрушки</a>
