--- a/hw6/index.html
+++ b/hw6/index.html
@@ -22,10 +22,10 @@
                             <a href="index.html">Главная</a>
                         </li>
                         <li>
-                            <a href="catalog.html">Игрушки</a>
+                            <a href="pages/catalog.html">Игрушки</a>
                         </li>
                         <li>
-                            <a href="contacts.html">Контакты</a>
+                            <a href="pages/contacts.html">Контакты</a>
                         </li>
                     </ul>
                 </div>
