--- a/hw6/catalog/item1.html
+++ b/hw6/catalog/item1.html
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="header">
             <div class="headerLogo">
-                <a href="index.html"><img src="../images/main/logo_main.png" alt="Ecosibtoys"></a>
+                <a href="../index.html"><img src="../images/main/logo_main.png" alt="Ecosibtoys"></a>
             </div>
             <div class="menu">
                 <div class="nav">
@@ -22,10 +22,10 @@
                             <a href="../index.html">Главная</a>
                         </li>
                         <li>
-                            <a href="../catalog.html">Игрушки</a>
+                            <a href="../pages/catalog.html">Игрушки</a>
                         </li>
                         <li>
-                            <a href="../contacts.html">Контакты</a>
+                            <a href="../pages/contacts.html">Контакты</a>
                         </li>
                     </ul>
                 </div>
