--- a/hw6/catalog/item3.html
+++ b/hw6/catalog/item3.html
@@ -18,10 +18,10 @@
                             <a href="../index.html">Главная</a>
                         </li>
                         <li>
-                            <a href="../catalog.html">Игрушки</a>
+                            <a href="../pages/catalog.html">Игрушки</a>
                         </li>
                         <li>
-                            <a href="../contacts.html">Контакты</a>
+                            <a href="../pages/contacts.html">Контакты</a>
                         </li>
                     </ul>
                     <div id="headerContacts">Телефон: +7 (999) 999-77-77 <br> email: <a href="mailto:privet@ecosibtoys.ru">privet@ecosibtoys.ru</a></div>
