--- a/js2/index.html
+++ b/js2/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="styles/slider.css">
 	<link rel="stylesheet" href="styles/style.css">
 	<link rel="stylesheet" href="styles/magic.css">
+	<title>Slider</title>
 </head>
 <body>
 	<div class="container">
@@ -23,8 +24,5 @@
 				<img src="img/slide_4.jpg" alt="slide">
 			</div>
 		</div>
-	</div>
-
-	<script src="scripts/slider.js"></script>
 </body>
 </html>
