class "col" deleted

--- a/datagroup/index.html
+++ b/datagroup/index.html
@@ -22,14 +22,14 @@
 		<h1>Pavelin Chernovin koodin esimerkit</h1>
 
 		<div class="row justify-content-center">
-			<div class="col-12 col-sm-12 col-md-3 menu">
+			<div class="col-sm-12 col-md-3 menu">
 				<button type="button" class="btn btn-primary" type="button" data-toggle="collapse" data-target="#html" aria-expanded="false" aria-controls="html">HTML</button>
 				<button type="button" class="btn btn-primary" type="button" data-toggle="collapse" data-target="#css" aria-expanded="false" aria-controls="css">CSS</button>
 				<button type="button" class="btn btn-primary" type="button" data-toggle="collapse" data-target="#php" aria-expanded="false" aria-controls="php">PHP</button>
 				<button type="button" class="btn btn-primary" type="button" data-toggle="collapse" data-target="#sql" aria-expanded="false" aria-controls="sql">MySQL</button>
 				<button type="button" class="btn btn-primary" type="button" data-toggle="collapse" data-target="#js" aria-expanded="false" aria-controls="js">JavaScript</button>
 			</div>
-			<div class="col-12 col-sm-12 col-md-9">
+			<div class="col-sm-12 col-md-9">
 				<div class="collapse multi-collapse" id="html">
 					<div class="card card-body">
 						<h3>Tässä on HTML5-koodin esimerkki</h3>
